h2. Release Notes for Eclipse EEF

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of EEF.

h3(#eef2.0.0). Changes in EEF 2.0.0

h4. Developer-Visible Changes

* <span class="label label-info">Modified</span> The class @org.eclipse.eef.core.api.controllers.AbstractEEFController@ and all its subclasses now require an EditingContextAdapter.

h3(#eef1.9.0). Changes in EEF 1.9.0

h4. User-Visible Changes

* <span class="label label-success">Added</span> Add support for permissions with locks

h3(#eef1.8.0). Changes in EEF 1.8.0

h4. Specifier-Visible Changes

* <span class="label label-info">Modified</span> The selection variable of the hyperlink widget now refers properly to the value of the hyperlink.

h4. Developer-Visible Changes

* <span class="label label-info">Modified</span> The interfaces of the controllers for the default widget will now return an IStatus in order to support potential issues after the execution of the callback.


h3(#eef1.7.2). Changes in EEF 1.7.2

h4. Specifier-Visible Changes

* <span class="label label-info">Modified</span> The dynamic mappings will take into account all the "if" blocks with a valid predicate expression and not only the first one.
* <span class="label label-info">Modified</span> Fixed an issue with the enablement of the widget actions of the reference widget.


h3(#eef1.7.1). Changes in EEF 1.7.1

h4. Specifier-Visible Changes 

* <span class="label label-info">Modified</span> Fixed an issue where the variable @input@ was not available for some expressions in the select and radio widget.
* <span class="label label-info">Modified</span> Improve the documentation of the available extension points

h4. Developer-Visible Changes

* <span class="label label-success">Added</span> Added the documentation of the IEEFTabDescriptorFilter and IEEFExtReferenceViewerFilterProvider extension points.