@@ -17,6 +17,7 @@
 			</li>
 			<li>style: The style of the reference widget.</li>
 			<li>conditionalStyles: All the conditional styles of the reference widget.</li>
+			<li>onClickExpression: If an onClickExpression is specified, the mono-valued version of the widget will now have a hyperlink instead of a label and the multi-valued version of the widget will react to clicks in the user interface. This expression is executed when the user will click on the widget in a similar fashion as the hyperlink and list widgets.</li>
 		</ul>
 		<h3 id="editanedreference">Edit an EReference named children</h3>
 		<p>In order to edit an EReference named 
