@@ -9,6 +9,7 @@ h3(#properties). Properties
 * iterableExpression: This expression will use concepts of the meta-model in order to compute the number of element to take into account. This expression must return a collection of elements on which we will iterate to create the widgets. For example, to fulfill our requirement of one text widget for each property with the type EString, you could type the following iterableExpression @aql:self.eClass().eAllStructuralFeatures@.
 * iterator: The iterator will be used to define a name to manipulate the result of the iterable expression. To fulfill our requirement, we could use the name @eStructuralFeature@.
 * ifs: This property will contain all the use cases that can be handled by our dynamic mapping.
+* forceRefresh: This property is used to indicate that the dynamic mapping is based on an iterableExpression which may return a different result overtime for the same object contrary to the example before @aql:self.eClass().eAllStructuralFeatures@. By setting forceRefresh to true, we will force the refresh of the user interface when evaluating this dynamic mapping.
 
 An "if" contains the following two properties:
 
