@@ -31,6 +31,7 @@
 			</li>
 			<li>style: The style of the group is used to modify the appearance of the group in the user interface.</li>
 			<li>conditionalStyles: The conditional styles is the list of all the alternate appearance that can be used when a specific condition is fulfilled.</li>
+			<li>actions: The list of the Toolbar Actions used to create buttons in the toolbar of the page. Those actions can contain a tooltipExpression wich should return a string used as the tooltip, an actionExpression executed when the user will click on the button and an imageExpression used to configure the appearance of the button. The imageExpression must return a string with the following structure PROJECT_NAME/IMAGE_PATH, for example: org.eclipse.sample/icons/Icon.gif</li>
 		</ul>
 		<h3 id="variables">Variables</h3>
 		<p>The semantic candidate expression will have access to two different variables, 
