@@ -16,6 +16,7 @@ h3(#properties). Properties
 * propertyValidationRules: The validation rules of the "widgets":widgets.html of the group. For more details regarding the validation in EEF, have a look at the documentation of the "validation":validation.html.
 * style: The style of the group is used to modify the appearance of the group in the user interface.
 * conditionalStyles: The conditional styles is the list of all the alternate appearance that can be used when a specific condition is fulfilled.
+* actions: The list of the Toolbar Actions used to create buttons in the toolbar of the page. Those actions can contain a tooltipExpression wich should return a string used as the tooltip, an actionExpression executed when the user will click on the button and an imageExpression used to configure the appearance of the button. The imageExpression must return a string with the following structure PROJECT_NAME/IMAGE_PATH, for example: org.eclipse.sample/icons/Icon.gif
 
 h3(#variables). Variables
 
