@@ -22,6 +22,7 @@
 			<li>semanticValidationRules: The validation rules of the page. For more details regarding the validation in EEF, have a look at the documentation of the 
 				<a href="validation.html">validation</a>.
 			</li>
+			<li>actions: The list of the Toolbar Actions used to create buttons in the toolbar of the page. Those actions can contain a tooltipExpression wich should return a string used as the tooltip, an actionExpression executed when the user will click on the button and an imageExpression used to configure the appearance of the button. The imageExpression must return a string with the following structure PROJECT_NAME/IMAGE_PATH, for example: org.eclipse.sample/icons/Icon.gif</li>
 		</ul>
 		<h4 id="variables">Variables</h4>
 		<p>The semantic candidate expression will have access to two variables 
