@@ -24,6 +24,7 @@
 		<ul>
 			<li>labelExpression: This expression is used to compute the label of the button. It should return a string.</li>
 			<li>actionExpression: This expression is used to define the behavior of the button. It will be executed when the end user will click on the button. It should not return anything.</li>
+			<li>imageExpression: This expression is used to compute the image to display in the button. This expression must return a string with the following structure PROJECT_NAME/IMAGE_PATH.</li>
 		</ul>
 		<h3 id="displayanaction">Display an action</h3>
 		<p>In order to create a hyperlink widget, you can use the following properties:</p>
