@@ -22,6 +22,7 @@
 		<ul>
 			<li>labelExpression: This expression is used to compute the label of the button. It should return a string.</li>
 			<li>actionExpression: This expression is used to define the behavior of the button. It will be executed when the end user will click on the button. It should not return anything.</li>
+			<li>imageExpression: This expression is used to compute the image to display in the button. This expression must return a string with the following structure PROJECT_NAME/IMAGE_PATH.</li>
 		</ul>
 		<h3 id="displayreadonlyestringeattribute">Display a read-only EString EAttribute</h3>
 		<p>In order to display in the user interface a label with the value of a read-only EAttribute with the eType EString, you can create a label widget with the following properties:</p>
