@@ -14,6 +14,7 @@ A widget action contains only the following properties:
 
 * labelExpression: This expression is used to compute the label of the button. It should return a string.
 * actionExpression: This expression is used to define the behavior of the button. It will be executed when the end user will click on the button. It should not return anything.
+* imageExpression: This expression is used to compute the image to display in the button. This expression must return a string with the following structure PROJECT_NAME/IMAGE_PATH.
 
 h3(#displayreadonlyestringeattribute). Display a read-only EString EAttribute
 
