@@ -20,7 +20,7 @@
 				<code>DOUBLE_CLICK</code>. This expression does not have to return anything.
 			</li>
 			<li>actions: The actions are a list of buttons which will be available next to the widget to allow the user to trigger some actions for the list. An action has a labelExpression which must return a string used as the label of the button created for the action. An action also has an action expression used to execute some behavior when the end user will click on the button. The action expression does not have to return anything. The action expression will have access to the selected elements in a variable named 
-				<code>selection</code>.
+				<code>selection</code>. An action can also have an imageExpression, used to compute the image of the button created for the action. This expression must return a string with the following structure PROJECT_NAME/IMAGE_PATH.
 			</li>
 			<li>style: The style of the list widget.</li>
 			<li>conditionalStyles: All the conditional styles of the list widget.</li>
