@@ -7,7 +7,7 @@ The list in EEF lets you display and edit a list of elements easily. On top of t
 * valueExpression: This expression will be used to compute all the valued will be displayed in the table. This expression must return an object.
 * displayExpression: This expression is used to compute each label of the table. This expression can use the result of the valueExpression thanks to the variable @value@. This expression must return a string.
 * onClickExpression: This expression will be executed when the user will click on the value. The user will be able to double click on a value. To determine whether the click on a single click or a double click, the kind of the click realized is available as a String in the variable @onClickEventKind@ which can have the value @SINGLE_CLICK@ or @DOUBLE_CLICK@. This expression does not have to return anything.
-* actions: The actions are a list of buttons which will be available next to the widget to allow the user to trigger some actions for the list. An action has a labelExpression which must return a string used as the label of the button created for the action. An action also has an action expression used to execute some behavior when the end user will click on the button. The action expression does not have to return anything. The action expression will have access to the selected elements in a variable named @selection@.
+* actions: The actions are a list of buttons which will be available next to the widget to allow the user to trigger some actions for the list. An action has a labelExpression which must return a string used as the label of the button created for the action. An action also has an action expression used to execute some behavior when the end user will click on the button. The action expression does not have to return anything. The action expression will have access to the selected elements in a variable named @selection@. An action can also have an imageExpression, used to compute the image of the button created for the action. This expression must return a string with the following structure PROJECT_NAME/IMAGE_PATH.
 * style: The style of the list widget.
 * conditionalStyles: All the conditional styles of the list widget.
 
