@@ -6,9 +6,17 @@ This document contains the release notes for recent major releases of EEF.
 
 h3(#eef2.0.0). Changes in EEF 2.0.0
 
+h4. Specifier-Visible Changes
+
+* <span class="label label-success">Added</span> You can now create _Toolbar Actions_ on pages and groups in order to define small buttons in their toolbars.
+* <span class="label label-success">Added</span> _Buttons_ and _Widget Actions_ can now use an image along with a label thanks to the new _Image expression_.
+* <span class="label label-success">Added</span> It is now possible to execute some behavior when the end users will click on the _Reference Widget_ thanks to the addition of an _OnClick expression_.
+* <span class="label label-success">Added</span> You can indicate that a _Dynamic Mapping For_ should force the refresh of the user interface with the _Force Refresh_ property.
+
 h4. Developer-Visible Changes
 
 * <span class="label label-info">Modified</span> The class @org.eclipse.eef.core.api.controllers.AbstractEEFController@ and all its subclasses now require an EditingContextAdapter.
+* <span class="label label-info">Modified</span> The interface @IConsumer@ has now been replaced by @java.util.Consumer@.
 
 h3(#eef1.9.0). Changes in EEF 1.9.0
 
